# servant-demo

./: .gitignore  Main.hs  Person.hs  SHSP.hs  servant-tutorial.cabal  shell.nix
