name:                servant-tutorial
version:             0.1.0.0
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable servant-tutorial
  main-is:             Main.hs
  other-extensions:    DataKinds, DeriveGeneric, TypeFamilies, TypeOperators
  build-depends:       base >=4.8 && <4.9, time >=1.5 && <1.6, aeson, servant, wai, servant-server, hsx2hs, hsp, servant-docs, servant-pandoc, pandoc
  default-language:    Haskell2010